Add a base href

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <base href="/association-game" />
     <script src="js/util.js"></script>
     <script src="js/index.js"></script>
     <link
