--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
   <head>
-    <script src="/association-game/js/util.js"></script>
-    <script src="/association-game/js/index.js"></script>
+    <base href="/association-game" />
+    <script src="./js/util.js"></script>
+    <script src="./js/index.js"></script>
     <link
       href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/association-game/css/index.css" />
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body onLoad="onLoad()">
     <div class="text-center mt-16">
